--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "dependencies": {
-      "config": "^3.3.7",
-      "express": "^4.17.2"
+        "config": "^3.3.7",
+        "express": "^4.17.2",
+        "joi": "^17.6.0",
+        "mongoose": "^6.5.0"
     }
-  }
+}
